--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulario de Agendamento</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-cell.css">
   <link rel="icon" type="image/x-icon" href="../ICON_ROSE_EP_cortado.png">
 </head>
 <body>
