--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
       <header>
-        <img src="./assets/COLOR_ICON_EP_rosegold.png" />
+        <img src="./assets/COLOR_ICON_EP_rosegold.png" title="Cantora Evelyn Pio"/>
         <h1>Formulario de Agendamento</h1>
       </header>
       <main>
